@@ -4,8 +4,10 @@ apkg-example-templates ({{ version }}-{{ release }}~{{ distro.tiny }}) unstable;
   * distro: {{ distro }} / {{ distro.idver }} / {{ distro.tiny }}
   * include: {% include 'distro/common/shared.txt' %}
   * raw include: {% include_raw 'distro/common/shared.txt' %}
-{%- if distro.match('debian >= 11', 'ubuntu > 20.04') %}
+{%- if distro.match('debian >= 12', 'ubuntu > 21.04') %}
   * new Debian-based
+{%- elif distro.match('deb-zzz') %}
+  * ancient Debian-based (distro alias)
 {%- elif distro.match('deb-old') %}
   * old Debian-based (distro alias)
 {%- elif distro.match('linuxmint') %}
